fix: fixing z-index nav error

--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -4,7 +4,7 @@
   height: auto;
   width: fit-content;
   min-width: 200px;
-  z-index: 19;
+  z-index: 20;
   top: 15px;
   left: 50%;
   transform: translateX(-50%);
