--- a/assets/scss/layout/_skills.scss
+++ b/assets/scss/layout/_skills.scss
@@ -22,7 +22,7 @@
   }
 }
 .skills-dropdown-wrapper {
-  z-index: 20;
+  z-index: 18;
   display: grid;
   grid-template-rows: 0fr;
   transition: grid-template-rows 0.3s ease-out;
